# crates/swissknife-types/src/lib.rs
@@ -11,6 +11,7 @@ mod api_key;
 mod auth;
 mod bitcoin;
 mod error;
+mod event;
 mod invoice;
 mod ln_address;
 mod lnurl;
@@ -31,6 +32,7 @@ pub use api_key::{ApiKey, ApiKeyFilter, CreateApiKeyRequest};
 pub use auth::{AuthProvider, ChangePasswordRequest, SignInRequest, SignInResponse, SignUpRequest};
 pub use bitcoin::{BtcAddress, BtcAddressFilter, BtcAddressType, BtcOutput, BtcOutputStatus, NewBtcAddressRequest};
 pub use error::ErrorResponse;
+pub use event::{ClientEvent, ClientEventType};
 pub use invoice::{Invoice, InvoiceFilter, InvoiceOrderBy, InvoiceStatus, LnInvoice, NewInvoiceRequest};
 pub use ln_address::{LnAddress, LnAddressFilter, RegisterLnAddressRequest, UpdateLnAddressRequest};
 pub use lnurl::{LNUrlpInvoiceQueryParams, LnURLPayRequest, LnUrlCallback, LnUrlPaySuccessAction, LnUrlSuccessAction};
