# src/infra/database/sea_orm/models/client_event.rs
@@ -1,0 +1,36 @@
+//! `SeaORM` Entity, @generated by sea-orm-codegen 1.1.19
+
+use sea_orm::entity::prelude::*;
+
+#[derive(Clone, Debug, PartialEq, DeriveEntityModel, Eq)]
+#[sea_orm(table_name = "client_event")]
+pub struct Model {
+    #[sea_orm(primary_key)]
+    pub id: i32,
+    pub wallet_id: Uuid,
+    pub event_type: String,
+    pub resource_id: Uuid,
+    #[sea_orm(column_type = "JsonBinary")]
+    pub payload: Json,
+    pub created_at: DateTime,
+}
+
+#[derive(Copy, Clone, Debug, EnumIter, DeriveRelation)]
+pub enum Relation {
+    #[sea_orm(
+        belongs_to = "super::wallet::Entity",
+        from = "Column::WalletId",
+        to = "super::wallet::Column::Id",
+        on_update = "NoAction",
+        on_delete = "Cascade"
+    )]
+    Wallet,
+}
+
+impl Related<super::wallet::Entity> for Entity {
+    fn to() -> RelationDef {
+        Relation::Wallet.def()
+    }
+}
+
+impl ActiveModelBehavior for ActiveModel {}
